docs: restructure Getting Started section and fix SVG paths
Restructure the Getting Started section into focused, actionable guides:

- Rewrite getting-started/index.md: merge installation (pip/cargo/docker/source
  tabs) with worker startup examples (smg serve and manual setup), add PD
  disaggregation quick-start with SGLang and vLLM tabs
- Add getting-started/multiple-workers.md: static workers, cloud API workers
  (OpenAI/Anthropic/xAI/Gemini), dynamic IGW mode with REST API
- Add getting-started/grpc-workers.md: all three runtimes (SGLang/vLLM/TensorRT-LLM),
  complete reasoning parser table (8 parsers), tool call parser table (13 parsers)
- Add getting-started/pd-disaggregation.md: SGLang PD (bootstrap coordination)
  and vLLM PD (NIXL/Mooncake KV transfer) setup guides
- Add getting-started/service-discovery.md: Kubernetes label selectors, PD
  discovery, RBAC, deployment example
- Add getting-started/load-balancing.md: all 8 policies with per-policy CLI
  flags, defaults, and configuration tables
- Add getting-started/tokenizer-caching.md: L0/L1 cache setup, memory planning,
  recommended configurations
- Add getting-started/monitoring.md: Prometheus metrics setup

Remove content absorbed into the new structure:
- Delete getting-started/installation.md (merged into index.md)
- Delete getting-started/quickstart.md (merged into index.md)
- Delete tutorials/ section entirely (production tutorial content covered by
  new getting-started guides and existing tasks/deployment pages)

Fix SVG image paths across 8 files: MkDocs renders pages as directory URLs
(page.md -> page/index.html), so relative paths from docs/concepts/reliability/
and similar 3-level-deep pages need ../../../assets/images/ not ../../assets/images/.

Remove 4 unused SVG files (getting-started-overview, production-architecture,
quickstart-flow, tutorial-architecture) that were orphaned by deleted pages.

Update mkdocs.yml nav to reflect new structure and remove Tutorials section.
Update all inte

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,9 +137,14 @@ markdown_extensions:
 nav:
   - Home: index.md
   - Getting Started:
-      - Overview: getting-started/index.md
-      - Installation: getting-started/installation.md
-      - Quickstart: getting-started/quickstart.md
+      - getting-started/index.md
+      - Multiple Workers: getting-started/multiple-workers.md
+      - gRPC Workers: getting-started/grpc-workers.md
+      - PD Disaggregation: getting-started/pd-disaggregation.md
+      - Service Discovery: getting-started/service-discovery.md
+      - Load Balancing: getting-started/load-balancing.md
+      - Tokenizer Caching: getting-started/tokenizer-caching.md
+      - Monitoring: getting-started/monitoring.md
   - Concepts:
       - concepts/index.md
       - Architecture:
@@ -176,10 +181,6 @@ nav:
           - Monitor with Prometheus: tasks/operations/monitoring.md
           - Configure Logging: tasks/operations/logging.md
           - Manage Workers: tasks/operations/workers.md
-  - Tutorials:
-      - tutorials/index.md
-      - Getting Started: tutorials/getting-started.md
-      - Production Deployment: tutorials/production.md
   - Reference:
       - reference/index.md
       - API:
