--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -5,12 +5,14 @@ on:
     branches: [ main ]
     paths-ignore:
       - "docs/**"
+      - "mkdocs.yml"
       - "*.md"
   pull_request:
     branches: [ main ]
     types: [opened, synchronize, reopened, labeled]
     paths-ignore:
       - "docs/**"
+      - "mkdocs.yml"
       - "*.md"
   workflow_dispatch:
 
