--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -215,15 +215,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # - name: benchmarks
-          #   timeout: 20
-          #   test_dirs: "e2e_test/benchmarks"
-          #   extra_deps: "genai-bench==0.0.3"
-          #   env_vars: ""
-          #   reruns: ""
-          #   upload_benchmarks: true
-          #   parallel_opts: ""  # No parallel for benchmarks (performance measurement)
-          #   ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py --ignore=e2e_test/benchmarks/test_nightly_perf.py"  # Go and nightly benchmarks run in dedicated jobs
+          - name: benchmarks
+            timeout: 20
+            test_dirs: "e2e_test/benchmarks"
+            extra_deps: "genai-bench==0.0.3"
+            env_vars: ""
+            reruns: ""
+            upload_benchmarks: true
+            parallel_opts: ""  # No parallel for benchmarks (performance measurement)
+            ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py --ignore=e2e_test/benchmarks/test_nightly_perf.py"  # Go and nightly benchmarks run in dedicated jobs
           - name: responses
             timeout: 25
             test_dirs: "e2e_test/responses"
@@ -234,56 +234,56 @@ jobs:
             setup_brave: true
             parallel_opts: ""  # Cloud backend tests not compatible with parallel execution
             ignore_opts: ""
-          # - name: e2e
-          #   timeout: 20
-          #   test_dirs: "e2e_test/router e2e_test/embeddings"
-          #   # py is needed for pytest-parallel; sentence-transformers provides HuggingFace reference embeddings
-          #   extra_deps: "pytest-parallel py sentence-transformers"
-          #   env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-          #   reruns: "--reruns 2 --reruns-delay 5"
-          #   parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
-          #   ignore_opts: ""
-          # - name: chat-completions-sglang
-          #   timeout: 20
-          #   test_dirs: "e2e_test/chat_completions"
-          #   extra_deps: "pytest-parallel py"
-          #   env_vars: "E2E_RUNTIME=sglang SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-          #   reruns: "--reruns 2 --reruns-delay 5"
-          #   parallel_opts: "--workers 1 --tests-per-worker 4"
-          #   test_filter: ""
-          #   ignore_opts: ""
-          # - name: chat-completions-vllm
-          #   timeout: 20
-          #   test_dirs: "e2e_test/chat_completions"
-          #   extra_deps: "pytest-parallel py"
-          #   env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-          #   reruns: "--reruns 2 --reruns-delay 5"
-          #   parallel_opts: "--workers 1 --tests-per-worker 4"
-          #   # TODO: Remove filter when vLLM supports logprobs and n>1 with greedy sampling
-          #   # Excludes: 5-grpc (logprobs=5), 2-None-grpc (n=2 with no logprobs), multiple_choices (n=2 tests)
-          #   test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
-          #   setup_vllm: true
-          #   ignore_opts: ""
-          # - name: vllm-pd
-          #   timeout: 15
-          #   test_dirs: "e2e_test/router/test_pd_mmlu.py"
-          #   extra_deps: ""
-          #   env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-          #   reruns: "--reruns 2 --reruns-delay 5"
-          #   parallel_opts: ""
-          #   test_filter: ""
-          #   setup_vllm: true
-          #   ignore_opts: ""
-          # - name: chat-completions-trtllm
-          #   timeout: 25
-          #   test_dirs: "e2e_test/chat_completions"
-          #   extra_deps: "pytest-parallel py"
-          #   env_vars: "E2E_RUNTIME=trtllm SHOW_WORKER_LOGS=1 SHOW_ROUTER_LOGS=1"
-          #   reruns: "--reruns 2 --reruns-delay 5"
-          #   parallel_opts: "--workers 1 --tests-per-worker 4"
-          #   test_filter: ""
-          #   setup_trtllm: true
-          #   ignore_opts: ""
+          - name: e2e
+            timeout: 20
+            test_dirs: "e2e_test/router e2e_test/embeddings"
+            # py is needed for pytest-parallel; sentence-transformers provides HuggingFace reference embeddings
+            extra_deps: "pytest-parallel py sentence-transformers"
+            env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
+            ignore_opts: ""
+          - name: chat-completions-sglang
+            timeout: 20
+            test_dirs: "e2e_test/chat_completions"
+            extra_deps: "pytest-parallel py"
+            env_vars: "E2E_RUNTIME=sglang SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: "--workers 1 --tests-per-worker 4"
+            test_filter: ""
+            ignore_opts: ""
+          - name: chat-completions-vllm
+            timeout: 20
+            test_dirs: "e2e_test/chat_completions"
+            extra_deps: "pytest-parallel py"
+            env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: "--workers 1 --tests-per-worker 4"
+            # TODO: Remove filter when vLLM supports logprobs and n>1 with greedy sampling
+            # Excludes: 5-grpc (logprobs=5), 2-None-grpc (n=2 with no logprobs), multiple_choices (n=2 tests)
+            test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
+            setup_vllm: true
+            ignore_opts: ""
+          - name: vllm-pd
+            timeout: 15
+            test_dirs: "e2e_test/router/test_pd_mmlu.py"
+            extra_deps: ""
+            env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: ""
+            test_filter: ""
+            setup_vllm: true
+            ignore_opts: ""
+          - name: chat-completions-trtllm
+            timeout: 25
+            test_dirs: "e2e_test/chat_completions"
+            extra_deps: "pytest-parallel py"
+            env_vars: "E2E_RUNTIME=trtllm SHOW_WORKER_LOGS=1 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: "--workers 1 --tests-per-worker 4"
+            test_filter: ""
+            setup_trtllm: true
+            ignore_opts: ""
     runs-on: k8s-runner-gpu
     timeout-minutes: ${{ matrix.timeout }}
     steps:
@@ -330,7 +330,7 @@ jobs:
           path: /tmp/oracle-xe-21-slim.tar
           key: docker-oracle-xe-21-slim
 
-      - name: Load or pull Oracle Docker image
+      - name: Start Oracle Database
         if: matrix.setup_oracle
         run: |
           if [ -f /tmp/oracle-xe-21-slim.tar ]; then
@@ -342,10 +342,6 @@ jobs:
             echo "Saving Oracle image to cache..."
             docker save gvenzl/oracle-xe:21-slim -o /tmp/oracle-xe-21-slim.tar
           fi
-
-      - name: Start Oracle Database
-        if: matrix.setup_oracle
-        run: |
           docker run -d -p 1521:1521 -e ORACLE_PASSWORD=oracle --name oracle-db gvenzl/oracle-xe:21-slim
           echo "Starting Oracle DB..."
 
@@ -362,10 +358,12 @@ jobs:
           path: /tmp/brave-search-mcp-sse.tar
           key: docker-brave-search-mcp-sse-1.0.10
 
-      - name: Load or pull Brave MCP Docker image
+      - name: Start Brave MCP Server
         if: matrix.setup_brave
+        env:
+          BRAVE_API_KEY: ${{ secrets.BRAVE_API_KEY }}
         run: |
-          if [ -f /tmp/brave-search-mcp-sse.tar ]; then
+         if [ -f /tmp/brave-search-mcp-sse.tar ]; then
             echo "Loading Brave MCP image from cache..."
             docker load -i /tmp/brave-search-mcp-sse.tar
           else
@@ -374,12 +372,6 @@ jobs:
             echo "Saving Brave MCP image to cache..."
             docker save shoofio/brave-search-mcp-sse:1.0.10 -o /tmp/brave-search-mcp-sse.tar
           fi
-
-      - name: Start Brave MCP Server
-        if: matrix.setup_brave
-        env:
-          BRAVE_API_KEY: ${{ secrets.BRAVE_API_KEY }}
-        run: |
           docker run -d \
             -p 8001:8080 \
             -e BRAVE_API_KEY \
