--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -310,8 +310,8 @@ jobs:
           # sudo apt-get install -y libaio1t64 || sudo apt-get install -y libaio1
           # # Copy libaio into Instant Client dir so it's on LD_LIBRARY_PATH
           # LIBAIO_PATH=$(find /usr/lib -name "libaio.so*" -type f 2>/dev/null | head -1)
-          # INSTANT_CLIENT_DIR="$HOME/instant-client"
-          # INSTANT_CLIENT_ZIP="instantclient-basic-linux.x64-23.26.1.0.0.zip"
+          INSTANT_CLIENT_DIR="$HOME/instant-client"
+          INSTANT_CLIENT_ZIP="instantclient-basic-linux.x64-23.26.1.0.0.zip"
 
           if [ ! -d "$INSTANT_CLIENT_DIR/instantclient_23_26" ]; then
             echo "Downloading Oracle Instant Client..."
