--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -328,7 +328,7 @@ jobs:
         uses: actions/cache@v5
         with:
           path: /tmp/oracle-xe-21-slim.tar
-          key: docker-oracle-xe-21-slim
+          key: docker-oracle-xe
 
       - name: Start Oracle Database
         if: matrix.setup_oracle
