--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -327,22 +327,22 @@ jobs:
         id: cache-oracle-image
         uses: actions/cache@v5
         with:
-          path: /tmp/oracle-xe-21-slim.tar
-          key: docker-oracle-xe
+          path: /tmp/oracle-xe-21-slim-faststart.tar
+          key: docker-oracle-xe-21-slim-faststart
 
       - name: Start Oracle Database
         if: matrix.setup_oracle
         run: |
-          if [ -f /tmp/oracle-xe-21-slim.tar ]; then
+          if [ -f /tmp/oracle-xe-21-slim-faststart.tar ]; then
             echo "Loading Oracle image from cache..."
-            docker load -i /tmp/oracle-xe-21-slim.tar
+            docker load -i /tmp/oracle-xe-21-slim-faststart.tar
           else
             echo "Pulling Oracle image from Docker Hub..."
-            docker pull gvenzl/oracle-xe:21-slim
+            docker pull gvenzl/oracle-xe:21-slim-faststart
             echo "Saving Oracle image to cache..."
-            docker save gvenzl/oracle-xe:21-slim -o /tmp/oracle-xe-21-slim.tar
+            docker save gvenzl/oracle-xe:21-slim-faststart -o /tmp/oracle-xe-21-slim-faststart.tar
           fi
-          docker run -d -p 1521:1521 -e ORACLE_PASSWORD=oracle --name oracle-db gvenzl/oracle-xe:21-slim
+          docker run -d -p 1521:1521 -e ORACLE_PASSWORD=oracle --name oracle-db gvenzl/oracle-xe:21-slim-faststart
           echo "Starting Oracle DB..."
 
           # Export Oracle connection environment variables
