--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -224,6 +224,7 @@ jobs:
             upload_benchmarks: true
             parallel_opts: ""  # No parallel for benchmarks (performance measurement)
             ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py --ignore=e2e_test/benchmarks/test_nightly_perf.py"  # Go and nightly benchmarks run in dedicated jobs
+            runner: 4-gpu-h100
           - name: agentic-apis
             timeout: 30
             test_dirs: "e2e_test/responses e2e_test/messages"
@@ -234,6 +235,7 @@ jobs:
             setup_brave: true
             parallel_opts: ""  # Cloud backend tests not compatible with parallel execution
             ignore_opts: ""
+            runner: k8s-runner-gpu
           - name: e2e
             timeout: 20
             test_dirs: "e2e_test/router e2e_test/embeddings"
@@ -243,6 +245,7 @@ jobs:
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
             ignore_opts: ""
+            runner: k8s-runner-gpu
           - name: chat-completions-sglang
             timeout: 20
             test_dirs: "e2e_test/chat_completions"
@@ -252,6 +255,7 @@ jobs:
             parallel_opts: "--workers 1 --tests-per-worker 4"
             test_filter: ""
             ignore_opts: ""
+            runner: k8s-runner-gpu
           - name: chat-completions-vllm
             timeout: 20
             test_dirs: "e2e_test/chat_completions"
@@ -264,6 +268,7 @@ jobs:
             test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
             setup_vllm: true
             ignore_opts: ""
+            runner: k8s-runner-gpu
           - name: vllm-pd
             timeout: 15
             test_dirs: "e2e_test/router/test_pd_mmlu.py"
@@ -274,6 +279,7 @@ jobs:
             test_filter: ""
             setup_vllm: true
             ignore_opts: ""
+            runner: k8s-runner-gpu
           - name: chat-completions-trtllm
             timeout: 25
             test_dirs: "e2e_test/chat_completions"
@@ -284,7 +290,8 @@ jobs:
             test_filter: ""
             setup_trtllm: true
             ignore_opts: ""
-    runs-on: k8s-runner-gpu
+            runner: 4-gpu-h100
+    runs-on: ${{ matrix.runner }}
     timeout-minutes: ${{ matrix.timeout }}
     steps:
       - name: Checkout code
@@ -305,7 +312,7 @@ jobs:
       - name: Setup SGLang backend
         if: ${{ !matrix.setup_vllm && !matrix.setup_trtllm }}
         uses: ./.github/actions/setup-sglang
-      
+
       - name: Download wheel artifact
         uses: actions/download-artifact@v7
         with:
@@ -557,7 +564,7 @@ jobs:
           if [[ "${{ needs.check-ci.outputs.should_run }}" != "true" ]]; then
             echo "CI was skipped (external contributor without run-ci label)"
             exit 0
-          elif [[ "${{ needs.python-lint.result }}" == "failure" || "${{ needs.build-wheel.result }}" == "failure" || "${{ needs.unit-tests.result }}" == "failure" || "${{ needs.gateway-e2e.result }}" == "failure" || "${{ needs.go-unit-tests.result }}" == "failure" || "${{ needs.go-bindings-e2e.result }}" == "failure" ]]; then
+          elif [[ "${{ needs.python-lint.result }}" == "failure" || "${{ needs.build-wheel.result }}" == "failure" || "${{ needs.python-unit-tests.result }}" == "failure" || "${{ needs.unit-tests.result }}" == "failure" || "${{ needs.gateway-e2e.result }}" == "failure" || "${{ needs.go-unit-tests.result }}" == "failure" || "${{ needs.go-bindings-e2e.result }}" == "failure" ]]; then
             echo "One or more jobs failed"
             exit 1
           else
