--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -317,6 +317,7 @@ jobs:
           pip uninstall -y smg || true
           pip install wheel/*.whl
           bash scripts/ci_install_e2e_deps.sh ${{ matrix.extra_deps }}
+
       - name: Setup Oracle Instant Client
         if: matrix.setup_oracle
         run: |
@@ -340,7 +341,7 @@ jobs:
       - name: Start Oracle Database
         if: matrix.setup_oracle
         run: |
-          docker run --rm -d -p 1521:1521 -e ORACLE_PASSWORD=oracle --name oracle-db gvenzl/oracle-xe:21-slim-faststart
+          docker run -d --rm -p 1521:1521 -e ORACLE_PASSWORD=oracle --name oracle-db gvenzl/oracle-xe:21-slim-faststart
           echo "Starting Oracle DB..."
 
           # Export Oracle connection environment variables
@@ -353,7 +354,7 @@ jobs:
         env:
           BRAVE_API_KEY: ${{ secrets.BRAVE_API_KEY }}
         run: |
-          docker run --rm -d \
+          docker run -d --rm \
             -p 8001:8080 \
             -e BRAVE_API_KEY \
             --name brave-search-server \
