--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -284,7 +284,7 @@ jobs:
             test_filter: ""
             setup_trtllm: true
             ignore_opts: ""
-    runs-on: k8s-runner-gpu
+    runs-on: 4-gpu-a10
     timeout-minutes: ${{ matrix.timeout }}
     steps:
       - name: Checkout code
