--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -235,7 +235,6 @@ jobs:
             setup_brave: true
             parallel_opts: ""  # Cloud backend tests not compatible with parallel execution
             ignore_opts: ""
-            runner: k8s-runner-gpu
           - name: e2e
             timeout: 20
             test_dirs: "e2e_test/router e2e_test/embeddings"
@@ -245,7 +244,6 @@ jobs:
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
             ignore_opts: ""
-            runner: k8s-runner-gpu
           - name: chat-completions-sglang
             timeout: 20
             test_dirs: "e2e_test/chat_completions"
@@ -255,7 +253,6 @@ jobs:
             parallel_opts: "--workers 1 --tests-per-worker 4"
             test_filter: ""
             ignore_opts: ""
-            runner: k8s-runner-gpu
           - name: chat-completions-vllm
             timeout: 20
             test_dirs: "e2e_test/chat_completions"
@@ -268,7 +265,6 @@ jobs:
             test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
             setup_vllm: true
             ignore_opts: ""
-            runner: k8s-runner-gpu
           - name: vllm-pd
             timeout: 15
             test_dirs: "e2e_test/router/test_pd_mmlu.py"
@@ -279,7 +275,6 @@ jobs:
             test_filter: ""
             setup_vllm: true
             ignore_opts: ""
-            runner: k8s-runner-gpu
           - name: chat-completions-trtllm
             timeout: 25
             test_dirs: "e2e_test/chat_completions"
@@ -291,7 +286,7 @@ jobs:
             setup_trtllm: true
             ignore_opts: ""
             runner: 4-gpu-h100
-    runs-on: ${{ matrix.runner }}
+    runs-on: ${{ matrix.runner || 'k8s-runner-gpu' }}
     timeout-minutes: ${{ matrix.timeout }}
     steps:
       - name: Checkout code
