docs: restructure getting-started tracks and align extension/control-plane docs to server routes
- Reorganize Getting Started into clear setup tracks: core deployment, operations/security, reliability/data, and advanced features\n- Clarify startup flow with smg serve vs smg launch and add explicit endpoint verification step\n- Add new Control Plane Operations guide with command-first workflows for workers, tokenizers, WASM modules, parser utilities, and cache/load APIs\n- Update tokenization/parsing guide to include admin bearer token usage for parser endpoints\n- Rewrite Extension API reference as an auth-aware endpoint matrix grounded to route groups defined in model_gateway/src/server.rs\n- Remove speculative endpoint details that did not match current routes and link users to OpenAI/Responses/Admin refs for deeper schemas\n- Update MkDocs nav to include the new control-plane operations guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,6 +148,7 @@ nav:
           - Logging: getting-started/logging.md
           - TLS: getting-started/tls.md
           - Control Plane Auth: getting-started/control-plane-auth.md
+          - Control Plane Operations: getting-started/control-plane-operations.md
       - Reliability and Data:
           - Reliability Controls: getting-started/reliability-controls.md
           - Data Connections: getting-started/data-connections.md
