--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -105,8 +105,8 @@ jobs:
           - { id: openai/gpt-oss-20b, slug: openai-gpt-oss-20b, test_class: TestNightlyGptOssSingle, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
           - { id: meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8, slug: meta-llama-Llama-4-Maverick-17B-128E-Instruct-FP8, test_class: TestNightlyLlama4MaverickSingle, runs_on: '["8-gpu-h200"]', gpu_type: H200 }
         variant:
-          - { id: sglang, runtime: sglang, grpc_only: "false" }
-          - { id: vllm,   runtime: vllm,   grpc_only: "true" }
+          - { id: sglang, runtime: sglang, grpc_only: "false", setup_vllm: false, setup_trtllm: false, extra_deps: "genai-bench" }
+          - { id: vllm,   runtime: vllm,   grpc_only: "true", setup_vllm: true, setup_trtllm: false, extra_deps: "genai-bench" }
 
     steps:
       - name: Check filters
@@ -128,11 +128,15 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Setup vLLM backend
-        if: steps.filter.outputs.skip != 'true' && matrix.variant.runtime == 'vllm'
+        if: steps.filter.outputs.skip != 'true' && matrix.variant.setup_vllm
         uses: ./.github/actions/setup-vllm
 
+      - name: Setup TRT-LLM backend
+        if: steps.filter.outputs.skip != 'true' && matrix.variant.setup_trtllm
+        uses: ./.github/actions/setup-trtllm
+
       - name: Setup SGLang backend
-        if: steps.filter.outputs.skip != 'true' && matrix.variant.runtime == 'sglang'
+        if: steps.filter.outputs.skip != 'true' && !matrix.variant.setup_vllm && !matrix.variant.setup_trtllm
         uses: ./.github/actions/setup-sglang
 
       - name: Download wheel artifact
@@ -147,7 +151,7 @@ jobs:
         run: |
           pip uninstall -y smg || true
           pip install wheel/*.whl
-          bash scripts/ci_install_e2e_deps.sh genai-bench
+          bash scripts/ci_install_e2e_deps.sh ${{ matrix.variant.extra_deps }}
 
       - name: Run benchmark
         if: steps.filter.outputs.skip != 'true'
@@ -207,8 +211,8 @@ jobs:
           - { id: openai/gpt-oss-20b, slug: openai-gpt-oss-20b, test_class: TestNightlyGptOssMulti, runs_on: '["k8s-runner-gpu","4-gpu-h100"]', gpu_type: H100 }
           # - { id: meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8, test_class: TestNightlyLlama4MaverickMulti } # tp=8, keep disabled for nightly
         variant:
-          - { id: sglang, runtime: sglang, grpc_only: "false" }
-          - { id: vllm,   runtime: vllm,   grpc_only: "true" }
+          - { id: sglang, runtime: sglang, grpc_only: "false", setup_vllm: false, setup_trtllm: false, extra_deps: "genai-bench" }
+          - { id: vllm,   runtime: vllm,   grpc_only: "true", setup_vllm: true, setup_trtllm: false, extra_deps: "genai-bench" }
 
     steps:
       - name: Check filters
@@ -230,11 +234,15 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Setup vLLM backend
-        if: steps.filter.outputs.skip != 'true' && matrix.variant.runtime == 'vllm'
+        if: steps.filter.outputs.skip != 'true' && matrix.variant.setup_vllm
         uses: ./.github/actions/setup-vllm
 
+      - name: Setup TRT-LLM backend
+        if: steps.filter.outputs.skip != 'true' && matrix.variant.setup_trtllm
+        uses: ./.github/actions/setup-trtllm
+
       - name: Setup SGLang backend
-        if: steps.filter.outputs.skip != 'true' && matrix.variant.runtime == 'sglang'
+        if: steps.filter.outputs.skip != 'true' && !matrix.variant.setup_vllm && !matrix.variant.setup_trtllm
         uses: ./.github/actions/setup-sglang
 
       - name: Download wheel artifact
@@ -249,7 +257,7 @@ jobs:
         run: |
           pip uninstall -y smg || true
           pip install wheel/*.whl
-          bash scripts/ci_install_e2e_deps.sh genai-bench
+          bash scripts/ci_install_e2e_deps.sh ${{ matrix.variant.extra_deps }}
 
       - name: Run benchmark
         if: steps.filter.outputs.skip != 'true'
