fix(ci): restore nightly benchmark to production settings
- Set _TEST_MODE = False to run full benchmarks instead of reduced test runs.
- Enable daily cron schedule at midnight (was disabled for PR testing).
- Remove pull_request trigger since nightly benchmarks shouldn't run on PRs.

--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -1,17 +1,14 @@
 name: Nightly Benchmark
 
 on:
-#  schedule:
-#    - cron: '0 0 * * 0'
+  schedule:
+    - cron: '0 0 * * *'
   push:
     branches: [ main ]
     paths-ignore:
       - "docs/**"
       - "mkdocs.yml"
       - "*.md"
-  pull_request:
-    branches: [ main ]
-    types: [ opened, synchronize, reopened, labeled ]
   workflow_dispatch:
     inputs:
       models:
