fix: include .pyi stubs in package-data, fail build if no protos found

--- a/grpc_client/python/pyproject.toml
+++ b/grpc_client/python/pyproject.toml
@@ -37,4 +37,4 @@ where = ["."]
 include = ["smg_grpc_proto*"]
 
 [tool.setuptools.package-data]
-smg_grpc_proto = ["proto/*.proto", "generated/*.py"]
+smg_grpc_proto = ["proto/*.proto", "generated/*.py", "generated/*.pyi"]
